# learn_ros

./: README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/lib/agitr/: count  hello  pubvel  subpose
devel/lib/pkgconfig/: agitr.pc
devel/share/agitr/cmake/: agitrConfig.cmake
src/agitr/: CMakeLists.txt  CMakeLists.txt~  count.cpp  hello.cpp  package.xml  package.xml~  pubvel.cpp  pubvel.cpp~  subpose.cpp  subpose.cpp~
