<?xml version="1.0"?>
<package>
  <name>agitr</name>
  <version>0.0.10</version>
  <description>Examples from a Gentle Introduction to ROS</description>
  <maintainer email="cory@todo.todo">cory</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>Geometry_msgs</run_depend>
  <build_depend>turtlesim</build_depend>
  <run_depend>turtlesim</run_depend>
  <export>
  </export>
</package>
